--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "stefandoorn/google-tag-manager-plugin": "~1.0",
-        "sylius/sylius": "^1.9"
+        "sylius/sylius": "^1.7 || ^1.9"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
@@ -33,10 +33,10 @@
         "phpstan/phpstan-webmozart-assert": "^1.0",
         "phpunit/phpunit": "^9.5",
         "sylius-labs/coding-standard": "^4.0",
-        "symfony/browser-kit": "^5.4 || ^6.0",
-        "symfony/debug-bundle": "^5.4 || ^6.0",
-        "symfony/dotenv": "^5.4 || ^6.0",
-        "symfony/intl": "^5.4 || ^6.0",
+        "symfony/browser-kit": "^4.4 || ^5.4 || ^6.0",
+        "symfony/debug-bundle": "^4.4 || ^5.4 || ^6.0",
+        "symfony/dotenv": "^4.4 || ^5.4 || ^6.0",
+        "symfony/intl": "^4.4 || ^5.4 || ^6.0",
         "symfony/web-profiler-bundle": "^5.4 || ^6.0",
         "vimeo/psalm": "5.4.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
