--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "sylius-plugin"
     ],
     "require": {
-        "stefandoorn/google-tag-manager-plugin": "~1.0",
+        "stefandoorn/google-tag-manager-plugin": "dev-master",
         "sylius/sylius": "^1.7 || ^1.9"
     },
     "require-dev": {
