--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
         "sylius",
         "sylius-plugin"
     ],
+    "repositories": [        
+        {
+            "type": "git",
+            "url": "https://github.com/printoclock/google-tag-manager-plugin.git"
+        }
     "require": {
         "stefandoorn/google-tag-manager-plugin": "dev-master",
         "sylius/sylius": "^1.7 || ^1.9"
