--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "stefandoorn/google-tag-manager-plugin": "dev-master",
-        "sylius/sylius": "^1.7 || ^1.9"
+        "sylius/sylius": "^1.7 || 1.9"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
