--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "symfony/debug-bundle": "^4.4 || ^5.4 || ^6.0",
         "symfony/dotenv": "^4.4 || ^5.4 || ^6.0",
         "symfony/intl": "^4.4 || ^5.4 || ^6.0",
-        "symfony/web-profiler-bundle": "^5.4 || ^6.0",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.4 || ^6.0",
         "vimeo/psalm": "5.4.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
