--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "stefandoorn/google-tag-manager-plugin": "dev-master",
-        "sylius/sylius": "^1.7"
+        "sylius/sylius": "^1.7 || ^1.9"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
@@ -39,11 +39,11 @@
         "phpstan/phpstan-webmozart-assert": "^1.0",
         "phpunit/phpunit": "^9.5",
         "sylius-labs/coding-standard": "^4.0",
-        "symfony/browser-kit": "^4.4 || ^5.4 || ^6.0",
-        "symfony/debug-bundle": "^4.4 || ^5.4 || ^6.0",
-        "symfony/dotenv": "^4.4 || ^5.4 || ^6.0",
-        "symfony/intl": "^4.4 || ^5.4 || ^6.0",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.4 || ^6.0",
+        "symfony/browser-kit": "^4.4 || ^5.4",
+        "symfony/debug-bundle": "^4.4 || ^5.4",
+        "symfony/dotenv": "^4.4 || ^5.4",
+        "symfony/intl": "^4.4 || ^5.4",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.4",
         "vimeo/psalm": "5.4.0",
         "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
